lib/grammar/ScimitarParser.cpp

// Generated from Scimitar.g4 by ANTLR 4.8; unmodified.


#include "ScimitarVisitor.h"

#include "ScimitarParser.h"


using namespace antlrcpp;
using namespace antlr4;

ScimitarParser::ScimitarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ScimitarParser::~ScimitarParser() {
  delete _interpreter;
}

std::string ScimitarParser::getGrammarFileName() const {
  return "Scimitar.g4";
}

const std::vector<std::string>& ScimitarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ScimitarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

ScimitarParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ScimitarParser::ActionContext *> ScimitarParser::RootContext::action() {
  return getRuleContexts<ScimitarParser::ActionContext>();
}

ScimitarParser::ActionContext* ScimitarParser::RootContext::action(size_t i) {
  return getRuleContext<ScimitarParser::ActionContext>(i);
}


size_t ScimitarParser::RootContext::getRuleIndex() const {
  return ScimitarParser::RuleRoot;
}


antlrcpp::Any ScimitarParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::RootContext* ScimitarParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, ScimitarParser::RuleRoot);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ScimitarParser::T__12)
      | (1ULL << ScimitarParser::END)
      | (1ULL << ScimitarParser::PARAM)
      | (1ULL << ScimitarParser::SET)
      | (1ULL << ScimitarParser::GROUP)
      | (1ULL << ScimitarParser::UNGROUP)
      | (1ULL << ScimitarParser::RUN)
      | (1ULL << ScimitarParser::SYSTEM)
      | (1ULL << ScimitarParser::COMMENT))) != 0)) {
      setState(62);
      action();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActionContext ------------------------------------------------------------------

ScimitarParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ScimitarParser::ActionContext::getRuleIndex() const {
  return ScimitarParser::RuleAction;
}

void ScimitarParser::ActionContext::copyFrom(ActionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RunBlockContext ------------------------------------------------------------------

ScimitarParser::RunContext* ScimitarParser::RunBlockContext::run() {
  return getRuleContext<ScimitarParser::RunContext>(0);
}

ScimitarParser::RunBlockContext::RunBlockContext(ActionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ScimitarParser::RunBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitRunBlock(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UserFunctionDefinitionContext ------------------------------------------------------------------

ScimitarParser::UserFunctionContext* ScimitarParser::UserFunctionDefinitionContext::userFunction() {
  return getRuleContext<ScimitarParser::UserFunctionContext>(0);
}

ScimitarParser::UserFunctionDefinitionContext::UserFunctionDefinitionContext(ActionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ScimitarParser::UserFunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitUserFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EngineActionContext ------------------------------------------------------------------

tree::TerminalNode* ScimitarParser::EngineActionContext::NEWLINE() {
  return getToken(ScimitarParser::NEWLINE, 0);
}

ScimitarParser::ParamContext* ScimitarParser::EngineActionContext::param() {
  return getRuleContext<ScimitarParser::ParamContext>(0);
}

ScimitarParser::FunctionContext* ScimitarParser::EngineActionContext::function() {
  return getRuleContext<ScimitarParser::FunctionContext>(0);
}

ScimitarParser::SetParamContext* ScimitarParser::EngineActionContext::setParam() {
  return getRuleContext<ScimitarParser::SetParamContext>(0);
}

ScimitarParser::SetOptionContext* ScimitarParser::EngineActionContext::setOption() {
  return getRuleContext<ScimitarParser::SetOptionContext>(0);
}

ScimitarParser::SetFunctionContext* ScimitarParser::EngineActionContext::setFunction() {
  return getRuleContext<ScimitarParser::SetFunctionContext>(0);
}

ScimitarParser::GroupContext* ScimitarParser::EngineActionContext::group() {
  return getRuleContext<ScimitarParser::GroupContext>(0);
}

ScimitarParser::UngroupContext* ScimitarParser::EngineActionContext::ungroup() {
  return getRuleContext<ScimitarParser::UngroupContext>(0);
}

ScimitarParser::EndContext* ScimitarParser::EngineActionContext::end() {
  return getRuleContext<ScimitarParser::EndContext>(0);
}

ScimitarParser::SystemContext* ScimitarParser::EngineActionContext::system() {
  return getRuleContext<ScimitarParser::SystemContext>(0);
}

ScimitarParser::EngineActionContext::EngineActionContext(ActionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ScimitarParser::EngineActionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitEngineAction(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprCommentContext ------------------------------------------------------------------

tree::TerminalNode* ScimitarParser::ExprCommentContext::COMMENT() {
  return getToken(ScimitarParser::COMMENT, 0);
}

ScimitarParser::ExprCommentContext::ExprCommentContext(ActionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ScimitarParser::ExprCommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitExprComment(this);
  else
    return visitor->visitChildren(this);
}
ScimitarParser::ActionContext* ScimitarParser::action() {
  ActionContext *_localctx = _tracker.createInstance<ActionContext>(_ctx, getState());
  enterRule(_localctx, 2, ScimitarParser::RuleAction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScimitarParser::END:
      case ScimitarParser::PARAM:
      case ScimitarParser::SET:
      case ScimitarParser::GROUP:
      case ScimitarParser::UNGROUP:
      case ScimitarParser::SYSTEM: {
        _localctx = dynamic_cast<ActionContext *>(_tracker.createInstance<ScimitarParser::EngineActionContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(77);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          setState(68);
          param();
          break;
        }

        case 2: {
          setState(69);
          function();
          break;
        }

        case 3: {
          setState(70);
          setParam();
          break;
        }

        case 4: {
          setState(71);
          setOption();
          break;
        }

        case 5: {
          setState(72);
          setFunction();
          break;
        }

        case 6: {
          setState(73);
          group();
          break;
        }

        case 7: {
          setState(74);
          ungroup();
          break;
        }

        case 8: {
          setState(75);
          end();
          break;
        }

        case 9: {
          setState(76);
          system();
          break;
        }

        }
        setState(79);
        match(ScimitarParser::NEWLINE);
        break;
      }

      case ScimitarParser::RUN: {
        _localctx = dynamic_cast<ActionContext *>(_tracker.createInstance<ScimitarParser::RunBlockContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(81);
        run();
        break;
      }

      case ScimitarParser::T__12: {
        _localctx = dynamic_cast<ActionContext *>(_tracker.createInstance<ScimitarParser::UserFunctionDefinitionContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(82);
        userFunction();
        break;
      }

      case ScimitarParser::COMMENT: {
        _localctx = dynamic_cast<ActionContext *>(_tracker.createInstance<ScimitarParser::ExprCommentContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(83);
        match(ScimitarParser::COMMENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

ScimitarParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::ParamContext::PARAM() {
  return getToken(ScimitarParser::PARAM, 0);
}

tree::TerminalNode* ScimitarParser::ParamContext::TYPE() {
  return getToken(ScimitarParser::TYPE, 0);
}

tree::TerminalNode* ScimitarParser::ParamContext::IDENTIFIER() {
  return getToken(ScimitarParser::IDENTIFIER, 0);
}

ScimitarParser::ParameterValueContext* ScimitarParser::ParamContext::parameterValue() {
  return getRuleContext<ScimitarParser::ParameterValueContext>(0);
}

std::vector<ScimitarParser::OptionContext *> ScimitarParser::ParamContext::option() {
  return getRuleContexts<ScimitarParser::OptionContext>();
}

ScimitarParser::OptionContext* ScimitarParser::ParamContext::option(size_t i) {
  return getRuleContext<ScimitarParser::OptionContext>(i);
}


size_t ScimitarParser::ParamContext::getRuleIndex() const {
  return ScimitarParser::RuleParam;
}


antlrcpp::Any ScimitarParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::ParamContext* ScimitarParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 4, ScimitarParser::RuleParam);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(ScimitarParser::PARAM);
    setState(87);
    match(ScimitarParser::TYPE);
    setState(88);
    match(ScimitarParser::IDENTIFIER);
    setState(89);
    parameterValue();
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ScimitarParser::T__0) {
      setState(90);
      match(ScimitarParser::T__0);
      setState(94);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ScimitarParser::T__8

      || _la == ScimitarParser::OPT) {
        setState(91);
        option();
        setState(96);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(97);
      match(ScimitarParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

ScimitarParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::FunctionContext::PARAM() {
  return getToken(ScimitarParser::PARAM, 0);
}

tree::TerminalNode* ScimitarParser::FunctionContext::IDENTIFIER() {
  return getToken(ScimitarParser::IDENTIFIER, 0);
}

ScimitarParser::ExprContext* ScimitarParser::FunctionContext::expr() {
  return getRuleContext<ScimitarParser::ExprContext>(0);
}

std::vector<ScimitarParser::OptionContext *> ScimitarParser::FunctionContext::option() {
  return getRuleContexts<ScimitarParser::OptionContext>();
}

ScimitarParser::OptionContext* ScimitarParser::FunctionContext::option(size_t i) {
  return getRuleContext<ScimitarParser::OptionContext>(i);
}


size_t ScimitarParser::FunctionContext::getRuleIndex() const {
  return ScimitarParser::RuleFunction;
}


antlrcpp::Any ScimitarParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::FunctionContext* ScimitarParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, ScimitarParser::RuleFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(ScimitarParser::PARAM);
    setState(101);
    match(ScimitarParser::T__2);
    setState(102);
    match(ScimitarParser::IDENTIFIER);
    setState(103);
    expr(0);
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ScimitarParser::T__0) {
      setState(104);
      match(ScimitarParser::T__0);
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ScimitarParser::T__8

      || _la == ScimitarParser::OPT) {
        setState(105);
        option();
        setState(110);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(111);
      match(ScimitarParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SetParamContext ------------------------------------------------------------------

ScimitarParser::SetParamContext::SetParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::SetParamContext::SET() {
  return getToken(ScimitarParser::SET, 0);
}

tree::TerminalNode* ScimitarParser::SetParamContext::PARAM() {
  return getToken(ScimitarParser::PARAM, 0);
}

tree::TerminalNode* ScimitarParser::SetParamContext::IDENTIFIER() {
  return getToken(ScimitarParser::IDENTIFIER, 0);
}

std::vector<ScimitarParser::OptionContext *> ScimitarParser::SetParamContext::option() {
  return getRuleContexts<ScimitarParser::OptionContext>();
}

ScimitarParser::OptionContext* ScimitarParser::SetParamContext::option(size_t i) {
  return getRuleContext<ScimitarParser::OptionContext>(i);
}


size_t ScimitarParser::SetParamContext::getRuleIndex() const {
  return ScimitarParser::RuleSetParam;
}


antlrcpp::Any ScimitarParser::SetParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitSetParam(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::SetParamContext* ScimitarParser::setParam() {
  SetParamContext *_localctx = _tracker.createInstance<SetParamContext>(_ctx, getState());
  enterRule(_localctx, 8, ScimitarParser::RuleSetParam);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(ScimitarParser::SET);
    setState(115);
    match(ScimitarParser::PARAM);
    setState(116);
    match(ScimitarParser::IDENTIFIER);
    setState(117);
    match(ScimitarParser::T__0);
    setState(119); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(118);
      option();
      setState(121); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ScimitarParser::T__8

    || _la == ScimitarParser::OPT);
    setState(123);
    match(ScimitarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SetOptionContext ------------------------------------------------------------------

ScimitarParser::SetOptionContext::SetOptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::SetOptionContext::SET() {
  return getToken(ScimitarParser::SET, 0);
}

tree::TerminalNode* ScimitarParser::SetOptionContext::OPTION() {
  return getToken(ScimitarParser::OPTION, 0);
}

std::vector<ScimitarParser::ScriptOptionContext *> ScimitarParser::SetOptionContext::scriptOption() {
  return getRuleContexts<ScimitarParser::ScriptOptionContext>();
}

ScimitarParser::ScriptOptionContext* ScimitarParser::SetOptionContext::scriptOption(size_t i) {
  return getRuleContext<ScimitarParser::ScriptOptionContext>(i);
}

std::vector<tree::TerminalNode *> ScimitarParser::SetOptionContext::STRING() {
  return getTokens(ScimitarParser::STRING);
}

tree::TerminalNode* ScimitarParser::SetOptionContext::STRING(size_t i) {
  return getToken(ScimitarParser::STRING, i);
}


size_t ScimitarParser::SetOptionContext::getRuleIndex() const {
  return ScimitarParser::RuleSetOption;
}


antlrcpp::Any ScimitarParser::SetOptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitSetOption(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::SetOptionContext* ScimitarParser::setOption() {
  SetOptionContext *_localctx = _tracker.createInstance<SetOptionContext>(_ctx, getState());
  enterRule(_localctx, 10, ScimitarParser::RuleSetOption);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(ScimitarParser::SET);
    setState(126);
    match(ScimitarParser::OPTION);
    setState(131); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(127);
      scriptOption();
      setState(128);
      match(ScimitarParser::T__3);
      setState(129);
      match(ScimitarParser::STRING);
      setState(133); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ScimitarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SetFunctionContext ------------------------------------------------------------------

ScimitarParser::SetFunctionContext::SetFunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::SetFunctionContext::SET() {
  return getToken(ScimitarParser::SET, 0);
}

tree::TerminalNode* ScimitarParser::SetFunctionContext::PARAM() {
  return getToken(ScimitarParser::PARAM, 0);
}

tree::TerminalNode* ScimitarParser::SetFunctionContext::IDENTIFIER() {
  return getToken(ScimitarParser::IDENTIFIER, 0);
}

std::vector<ScimitarParser::ExprContext *> ScimitarParser::SetFunctionContext::expr() {
  return getRuleContexts<ScimitarParser::ExprContext>();
}

ScimitarParser::ExprContext* ScimitarParser::SetFunctionContext::expr(size_t i) {
  return getRuleContext<ScimitarParser::ExprContext>(i);
}

std::vector<ScimitarParser::OptionContext *> ScimitarParser::SetFunctionContext::option() {
  return getRuleContexts<ScimitarParser::OptionContext>();
}

ScimitarParser::OptionContext* ScimitarParser::SetFunctionContext::option(size_t i) {
  return getRuleContext<ScimitarParser::OptionContext>(i);
}


size_t ScimitarParser::SetFunctionContext::getRuleIndex() const {
  return ScimitarParser::RuleSetFunction;
}


antlrcpp::Any ScimitarParser::SetFunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitSetFunction(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::SetFunctionContext* ScimitarParser::setFunction() {
  SetFunctionContext *_localctx = _tracker.createInstance<SetFunctionContext>(_ctx, getState());
  enterRule(_localctx, 12, ScimitarParser::RuleSetFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(135);
    match(ScimitarParser::SET);
    setState(136);
    match(ScimitarParser::PARAM);
    setState(137);
    match(ScimitarParser::IDENTIFIER);
    setState(138);
    match(ScimitarParser::T__0);
    setState(147); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(147);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ScimitarParser::T__2: {
          setState(139);
          match(ScimitarParser::T__2);
          setState(140);
          match(ScimitarParser::T__3);
          setState(141);
          expr(0);
          break;
        }

        case ScimitarParser::T__8:
        case ScimitarParser::OPT: {
          setState(143); 
          _errHandler->sync(this);
          alt = 1;
          do {
            switch (alt) {
              case 1: {
                    setState(142);
                    option();
                    break;
                  }

            default:
              throw NoViableAltException(this);
            }
            setState(145); 
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
          } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(149); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ScimitarParser::T__2)
      | (1ULL << ScimitarParser::T__8)
      | (1ULL << ScimitarParser::OPT))) != 0));
    setState(151);
    match(ScimitarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GroupContext ------------------------------------------------------------------

ScimitarParser::GroupContext::GroupContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::GroupContext::GROUP() {
  return getToken(ScimitarParser::GROUP, 0);
}

std::vector<tree::TerminalNode *> ScimitarParser::GroupContext::IDENTIFIER() {
  return getTokens(ScimitarParser::IDENTIFIER);
}

tree::TerminalNode* ScimitarParser::GroupContext::IDENTIFIER(size_t i) {
  return getToken(ScimitarParser::IDENTIFIER, i);
}


size_t ScimitarParser::GroupContext::getRuleIndex() const {
  return ScimitarParser::RuleGroup;
}


antlrcpp::Any ScimitarParser::GroupContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitGroup(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::GroupContext* ScimitarParser::group() {
  GroupContext *_localctx = _tracker.createInstance<GroupContext>(_ctx, getState());
  enterRule(_localctx, 14, ScimitarParser::RuleGroup);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    match(ScimitarParser::GROUP);
    setState(155); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(154);
      match(ScimitarParser::IDENTIFIER);
      setState(157); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ScimitarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UngroupContext ------------------------------------------------------------------

ScimitarParser::UngroupContext::UngroupContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScimitarParser::UngroupContext::UNGROUP() {
  return getToken(ScimitarParser::UNGROUP, 0);
}

std::vector<tree::TerminalNode *> ScimitarParser::UngroupContext::IDENTIFIER() {
  return getTokens(ScimitarParser::IDENTIFIER);
}

tree::TerminalNode* ScimitarParser::UngroupContext::IDENTIFIER(size_t i) {
  return getToken(ScimitarParser::IDENTIFIER, i);
}


size_t ScimitarParser::UngroupContext::getRuleIndex() const {
  return ScimitarParser::RuleUngroup;
}


antlrcpp::Any ScimitarParser::UngroupContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ScimitarVisitor*>(visitor))
    return parserVisitor->visitUngroup(this);
  else
    return visitor->visitChildren(this);
}

ScimitarParser::UngroupContext* ScimitarParser::ungroup() {
  UngroupContext *_localctx = _tracker.createInstance<UngroupContext>(_ctx, getState());
  enterRule(_localctx, 16, ScimitarParser::RuleUngroup);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    match(ScimitarParser::UNGROUP);
    setState(161); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(160);
      match(ScimitarParser::IDENTIFIER);
      setState(163); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ScimitarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
